openmediavault (1.0.10) stable; urgency=low

  * Check whether a directory is still used as mount point before
    unlinking. This is done to prevent data loss when the device or
    resource is busy.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 03 Aug 2014 23:27:31 +0200

openmediavault (1.0.9) stable; urgency=low

  * Update locales.
  * Supporting stateful address autoconfiguration (DHCPv6) and stateless
    address autoconfiguration (SLAAC) for IPv6 network interfaces in
    omv-firstaid.
  * Improve partitioning of the storage device when creating a file system.
  * Rename PHP function boolval to boolvalEx because this function is
    introduced with PHP 5.5 and will conflict with the OMV implemented
    function.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 29 Jul 2014 01:03:00 +0200

openmediavault (1.0.8) stable; urgency=low

  * Add 'Download' button to OMV.workspace.panel.Textarea panels. 
  * Add 'Diagnostics | System Information | Report' page.
  * Improve various omv-sysinfo scripts.
  * Improve d-i package. Force grub to use the same storage device on which
    the operating system was installed when it was manually chosen.
  * Mantis 0001063: Add module for listing installable plugins.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 25 Jul 2014 12:58:55 +0200

openmediavault (1.0.7) stable; urgency=low

  * Improve d-i package.
  * Fix WebGUI issue when adding multiple firewall rules in a bulk.
  * Mantis 0001062: Set shared folder privileges per user or group.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 21 Jul 2014 12:06:29 +0200

openmediavault (1.0.6) stable; urgency=low

  * Improve d-i package.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 20 Jul 2014 19:01:13 +0200

openmediavault (1.0.5) stable; urgency=low

  * Harden system init scripts that are executed by d-i.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 17 Jul 2014 23:14:39 +0200
