@@ -20,7 +20,7 @@ Depends: libjs-extjs4 (>= 4.2.2), php5-fpm, libpam-modules, pm-utils,
  ca-certificates, perl, libjson-perl, liblocale-po-perl,
  libjavascript-minifier-xs-perl, coreutils, xmlstarlet (>= 1.3.1),
  php5-proctitle, parted, bash, diffutils, lsof, socat, rrdcached,
- nginx (>= 1.2.1), bash-completion
+ nginx (>= 1.2.1), bash-completion, python3, python3-apt
 Description: Open network attached storage solution
  OpenMediaVault is a small and simple to use network attached storage system with
  a smart WebGUI.
