@@ -3,6 +3,9 @@ openmediavault (1.0.10) stable; urgency=low
   * Check whether a directory is still used as mount point before
     unlinking. This is done to prevent data loss when the device or
     resource is busy.
+  * Remove deprecated RPC Apt::createIndex and Plugin::createIndex.
+  * Improve omv-mkaptindex command. The index creation has now better
+    performance.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sun, 03 Aug 2014 23:27:31 +0200
 
